fix visibility on modal

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -11,7 +11,6 @@
   opacity: 0;
   transition: visibility 0.2s, opacity 0.2s linear;
   display: flex;
-  visibility: hidden;
 }
 
 .modal_opened {
